[project]
name = "osipi_sarg"
version = "1.0.0"
authors = [{ name = "Jackson Hardee" }]
dependencies = [
    "dagster-dbt==0.23.16",
    "dagster-duckdb-polars==0.23.16",
    "dagster-duckdb",
    "dagster==1.7.16",
    "dagstermill",
    "datasets",
    "dbt-core",
    "dbt-duckdb",
    "duckdb==1.0.0",
    "huggingface_hub",
    "zenodo-get",
    "httpx[http2]",
    "pyarrow",
    "python-slugify",
    "tenacity",
    "itk>=5.4.0,<6",
    "ngff-zarr[itk,dask-image]>=0.8.5,<0.9", "s5cmd>=0.2.0,<0.3",
]

requires-python = ">=3.11, <=3.13"
readme = "README.md"

[project.urls]
Homepage = "https://osipi.ismrm.org/"
Task_Forces = "https://osipi.ismrm.org/task-forces/"
Issues = "https://github.com/OSIPI/TF2.4_IVIM-MRI_CodeCollection/issues"
CI = "https://github.com/OSIPI/TF2.4_IVIM-MRI_CodeCollection/actions"

[project.optional-dependencies]
dev = ["dagster-webserver==1.7.16", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["osipi_sarg"]

[tool.setuptools.package-data]
"osipi_sarg" = ["../dbt/**"]

[tool.dagster]
module_name = "osipi_sarg"

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
length-sort = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
osipi-sarg= { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
stage-samples = { cmd = "dagster job execute -j stage_ivim_samples_job -m osipi_sarg", description = "Stage OSIPI IVIM Data Collection Samples" }
clean = { cmd = "rm -rf data/*.parquet data/*.duckdb dbt/target dbt/dbt_packages dbt/logs", description = "Clean the project artifacts" }

[tool.pixi.feature.dev.tasks]
dev = { cmd = "dagster dev", description = "Run the development environment" }
